# Property-Panagement-App

./: .gitignore  README.md
.agents/skills/testing-e2e/: SKILL.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4b2b98e0915d_initial_schema.py  736a284d0363_add_activity_logs_table.py
backend/app/: activity.py  auth.py  config.py  database.py  main.py  tenant.py
backend/app/models/: __init__.py  accounting.py  activity_log.py  deal.py  document.py  kpi.py  master.py  tenant.py
backend/app/routers/: accounting.py  activity_logs.py  auth.py  customers.py  dashboard.py  deals.py  departments.py  documents.py  employees.py  kpi.py  partners.py  properties.py  tenants.py
backend/app/schemas/: accounting.py  activity_log.py  auth.py  dashboard.py  deal.py  document.py  kpi.py  master.py  tenant.py
backend/scripts/: seed.py
docs/: DESIGN.md
frontend/: package-lock.json
frontend/public/: manifest.json  offline.html  sw.js
frontend/src/: proxy.ts
frontend/src/app/: layout.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/customers/: page.tsx
frontend/src/app/(dashboard)/deals/: page.tsx
frontend/src/app/(dashboard)/departments/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: confirm-dialog.tsx  data-table.tsx  detail-section.tsx  form-field.tsx  modal.tsx  sidebar.tsx  status-badge.tsx
frontend/src/context/: auth-context.tsx
frontend/src/hooks/: use-api.ts
frontend/src/lib/: api-client.ts  auth.ts  types.ts
(+14 files in other folders)
